# ksshmanager

./: .gitignore  CMakeLists.txt  README.md  main.cpp  ssh_session.cpp  ssh_session.h  toplevel.cpp  toplevel.h
dialogs/: add_ssh_session_dialog.cpp  add_ssh_session_dialog.h  add_ssh_session_dialog.ui  settings_dialog.cpp  settings_dialog.h  settings_dialog.ui
